--- a/index.html
+++ b/index.html
@@ -1,182 +1,76 @@
 <!DOCTYPE html>
-<html lang="zh-TW">
+<html lang="zh-Hant">
 <head>
   <meta charset="UTF-8">
-  <title>部分工時假期計算器（多人版）</title>
+  <title>部分工時假期計算器</title>
   <style>
-    body { font-family: Arial, sans-serif; max-width: 900px; margin: 40px auto; line-height: 1.6; }
-    h2 { margin-top: 40px; }
-    table { border-collapse: collapse; width: 100%; margin-bottom: 20px; }
-    th, td { border: 1px solid #ccc; padding: 8px; text-align: center; }
-    pre { background: #f7f7f7; padding: 15px; }
-    button { padding: 10px 15px; cursor: pointer; margin-top: 10px; }
-    select, input { width: 100%; }
+    body { font-family: Arial, sans-serif; margin: 20px; }
+    label { display: block; margin-top: 10px; }
+    input, select { margin: 5px 0; }
+    .result { margin-top: 20px; padding: 10px; border: 1px solid #aaa; }
   </style>
 </head>
 <body>
-  <h1>部分工時假期計算器（多人版）</h1>
-  <p>一次輸入 5 個人，計算各自的假期時數與薪資</p>
+  <h2>部分工時假期計算器</h2>
+  <form id="calcForm">
+    <label>年資（月數）：<input type="number" id="monthsWorked" value="12"></label>
+    <label>每月平均實際工時（不含加班）：<input type="number" id="monthlyHours"></label>
+    <label>時薪（元）：<input type="number" id="hourlyWage"></label>
+    <label>到職是否滿 6 個月？<input type="checkbox" id="overSixMonths" checked></label>
+    <label>產假類型：
+      <select id="maternityType">
+        <option value="56">正常分娩（56天）</option>
+        <option value="28">流產 3 個月以上（28天）</option>
+        <option value="7">流產 2~3 個月（7天）</option>
+        <option value="5">流產未滿 2 個月（5天）</option>
+      </select>
+    </label>
+    <button type="button" onclick="calculate()">計算</button>
+  </form>
 
-  <table>
-    <thead>
-      <tr>
-        <th>姓名</th>
-        <th>假別</th>
-        <th>子假別</th>
-        <th>年資(月)</th>
-        <th>全年實際工時</th>
-        <th>平均週工時</th>
-        <th>時薪</th>
-        <th>當日班表工時</th>
-      </tr>
-    </thead>
-    <tbody id="inputRows">
-      <!-- 自動產生 5 行 -->
-    </tbody>
-  </table>
-
-  <button onclick="calcAll()">計算</button>
-  <pre id="result"></pre>
+  <div class="result" id="output"></div>
 
   <script>
-    const leaveOptions = `
-      <option value="annual">特休假</option>
-      <option value="other">婚喪病事產檢陪產</option>
-      <option value="maternity">產假</option>
-      <option value="menstrual">生理假</option>`;
-
-    const subLeaveOptions = `
-      <option value="marriage">婚假 (8天，全薪)</option>
-      <option value="funeral8">喪假 (8天，全薪)</option>
-      <option value="funeral6">喪假 (6天，全薪)</option>
-      <option value="funeral3">喪假 (3天，全薪)</option>
-      <option value="personal">事假 (14天，無薪)</option>
-      <option value="sick">病假 (30天，半薪)</option>
-      <option value="prenatal">產檢假 (5天，全薪)</option>
-      <option value="paternity">陪產假 (7天，全薪)</option>`;
-
-    function getBaseAnnualDays(months) {
-      if (months < 6) return 0;
-      if (months < 12) return 3;
-      if (months < 24) return 7;
-      if (months < 36) return 10;
-      if (months < 60) return 14;
-      if (months < 120) return 15;
-      if (months < 180) return 16;
-      if (months < 240) return 17;
-      return 30;
+    function calculateVacationDays(monthsWorked) {
+      if (monthsWorked < 6) return 0;
+      if (monthsWorked < 12) return 3;
+      if (monthsWorked < 24) return 7;
+      if (monthsWorked < 36) return 10;
+      if (monthsWorked < 60) return 14;
+      if (monthsWorked < 120) return 15;
+      let extra = Math.floor((monthsWorked - 120) / 12) + 16;
+      return Math.min(extra, 30);
     }
 
-    function getLeaveInfo(subType) {
-      switch (subType) {
-        case "marriage": return { days: 8, payType: "full" };
-        case "funeral8": return { days: 8, payType: "full" };
-        case "funeral6": return { days: 6, payType: "full" };
-        case "funeral3": return { days: 3, payType: "full" };
-        case "personal": return { days: 14, payType: "none" };
-        case "sick": return { days: 30, payType: "half" };
-        case "prenatal": return { days: 5, payType: "full" };
-        case "paternity": return { days: 7, payType: "full" };
-        default: return { days: 0, payType: "none" };
-      }
+    function calculate() {
+      const monthsWorked = parseInt(document.getElementById("monthsWorked").value);
+      const monthlyHours = parseFloat(document.getElementById("monthlyHours").value);
+      const hourlyWage = parseFloat(document.getElementById("hourlyWage").value);
+      const overSixMonths = document.getElementById("overSixMonths").checked;
+      const maternityDays = parseInt(document.getElementById("maternityType").value);
+
+      const fullYearHours = 2088;
+      const yearHours = monthlyHours * 12;
+
+      // 特休
+      const vacationDays = calculateVacationDays(monthsWorked);
+      const vacationHours = (yearHours / fullYearHours) * vacationDays * 8;
+      const vacationPay = vacationHours * hourlyWage;
+
+      // 產假 (週工時估算)
+      const weeklyHours = monthlyHours / 4.33;
+      const maternityWeeks = maternityDays / 7;
+      const maternityHours = weeklyHours * maternityWeeks;
+      let maternityPay = maternityHours * hourlyWage;
+      if (!overSixMonths) maternityPay /= 2;
+
+      // 顯示結果
+      document.getElementById("output").innerHTML = `
+        <h3>計算結果</h3>
+        <p><b>特休假：</b>${vacationDays} 天 → ${vacationHours.toFixed(2)} 小時，約 NT$${vacationPay.toFixed(0)}</p>
+        <p><b>產假：</b>${maternityDays} 天 → ${maternityHours.toFixed(2)} 小時，約 NT$${maternityPay.toFixed(0)}</p>
+      `;
     }
-
-    function calcRow(data) {
-      const { name, leaveType, subLeaveType, months, workedYear, fullYear, avgWeek, wage, n } = data;
-
-      let N = 0;
-      let pay = 0;
-      let baseDays = getBaseAnnualDays(months);
-      let leaveInfo = getLeaveInfo(subLeaveType);
-
-      if (leaveType === "annual") {
-        N = (workedYear / fullYear) * (baseDays * 8);
-        pay = wage * N;
-      }
-
-      if (leaveType === "other") {
-        N = (avgWeek / 40) * (leaveInfo.days * 8);
-        if (leaveInfo.payType === "full") {
-          pay = wage * n;
-        } else if (leaveInfo.payType === "half") {
-          pay = wage * n * 0.5;
-        } else {
-          pay = 0;
-        }
-      }
-
-      if (leaveType === "maternity") {
-        N = avgWeek * 8 * 8;
-        if (months < 6) {
-          pay = wage * n * 0.5;
-        } else {
-          pay = wage * n;
-        }
-      }
-
-      if (leaveType === "menstrual") {
-        N = n;
-        pay = wage * n * 0.5;
-      }
-
-      return {
-        name,
-        N: N.toFixed(2),
-        n,
-        pay: pay.toFixed(2),
-        leave: leaveType,
-        subLeave: subLeaveType,
-        leaveInfo
-      };
-    }
-
-    function calcAll() {
-      let rows = document.querySelectorAll("#inputRows tr");
-      let results = [];
-
-      rows.forEach(row => {
-        const inputs = row.querySelectorAll("input, select");
-        const data = {
-          name: inputs[0].value,
-          leaveType: inputs[1].value,
-          subLeaveType: inputs[2].value,
-          months: parseFloat(inputs[3].value) || 0,
-          workedYear: parseFloat(inputs[4].value) || 0,
-          fullYear: 2088,
-          avgWeek: parseFloat(inputs[5].value) || 0,
-          wage: parseFloat(inputs[6].value) || 0,
-          n: parseFloat(inputs[7].value) || 0
-        };
-        results.push(calcRow(data));
-      });
-
-      let output = results.map(r =>
-        `【${r.name || "未填姓名"}】\n假別: ${r.leave} ${r.subLeave}\n應休時數 N: ${r.N} 小時\n實際工時 n: ${r.n} 小時\n估算薪資: ${r.pay} 元\n${r.leave === "other" ? `(天數: ${r.leaveInfo.days}, 薪資規則: ${r.leaveInfo.payType})` : ""}`
-      ).join("\n\n");
-
-      document.getElementById("result").innerText = output;
-    }
-
-    // 產生 5 行輸入框
-    function initRows() {
-      let tbody = document.getElementById("inputRows");
-      for (let i = 0; i < 5; i++) {
-        let tr = document.createElement("tr");
-        tr.innerHTML = `
-          <td><input type="text" placeholder="姓名"></td>
-          <td><select>${leaveOptions}</select></td>
-          <td><select>${subLeaveOptions}</select></td>
-          <td><input type="number"></td>
-          <td><input type="number"></td>
-          <td><input type="number"></td>
-          <td><input type="number"></td>
-          <td><input type="number"></td>
-        `;
-        tbody.appendChild(tr);
-      }
-    }
-
-    initRows();
   </script>
 </body>
 </html>
